--- a/src/tools/sam-ba/android/build.gradle
+++ b/src/tools/sam-ba/android/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.github.ninevoltz:usb-serial-for-android:3.4.5'
     implementation "androidx.annotation:annotation:1.3.0"
     implementation 'androidx.test:core:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation 'androidx.test:runner:1.4.0'
